--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "vite",
     "build": "vite build --emptyOutDir",
+    "serve": "serve dist -s",
     "lint": "eslint *.js src/**/*.js",
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
     "test": "jest",
     "preview": "vite preview"
-  },
+},
   "author": "Shane Thompson",
   "license": "ISC",
   "devDependencies": {
